# picopins

./: CHANGELOG.md  LICENSE  Makefile  README.md  boilerplate.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/: funding.yml
.github/workflows/: build.yml  qa.yml  test.yml
PROJECT_NAME/: __init__.py
picopins/: __main__.py
tests/: conftest.py  test_setup.py
